# Unprectable

./: AGENTS.md  README.md  log.txt  main.py  package-lock.json  package.json  pyproject.toml  rag_model.py  requirement.txt  vitest.config.ts
agents/docs_pipeline/: course_ourline.py  docs_parsing.py  state.py
agents/info/: langchain-llms.txt
chroma_db/: chroma.sqlite3
context/: super-memory.py
db/: document.py  mongo_client.py  neo-graph.py  pinecone-client.py  pinecone.py
lib/: inngest-client.py  inngest_client.py
model/: agent_graph.py  chatml.py
src/app/: layout.tsx  package.json  page.tsx  pnpm-lock.yaml
src/app/api/generate-derivative/: route.test.ts  route.ts
src/app/api/generate-map/: route.test.ts  route.ts
src/app/api/upload/: route.test.ts  route.ts
src/app/app/: _app.tsx  globals.css  layout.tsx  page.tsx
src/app/app/account/: [page].tsx
src/app/app/auth/: [page].tsx
src/app/app/organization/: [path].tsx
src/app/lib/: auth-client.ts  auth.ts
src/app/mindmap/: page.tsx
src/app/provider/: better-provider.tsx
src/components/: FileDropzone.test.tsx  FileDropzone.tsx  MindMapNode.test.tsx  MindMapNode.tsx  NodeDetailPanel.test.tsx  NodeDetailPanel.tsx  SynthesisEdge.tsx  SynthesisSkeletonNode.test.tsx  SynthesisSkeletonNode.tsx
src/components/ui/: card.tsx  tabs.tsx
src/lib/: ai.ts  autoLayout.test.ts  autoLayout.ts  chunker.test.ts  chunker.ts  layout.test.ts  layout.ts  parsers.test.ts  parsers.ts  schema.test.ts  schema.ts  utils.test.ts
src/test/: setup.ts
src/types/: pdf-parse.d.ts
(+3 files in other folders)
