[project]
name = "unprectable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "ddgs>=9.11.4",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "langchain[google-genai]>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.1",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "supermemory>=3.28.0",
]
